agregue un badge en el producto tarta de chocolate

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -87,7 +87,7 @@
                 alt="Tarta de chocolate"
               />
               <div class="card-body">
-                <h5 class="card-title">Torta de Chocolate</h5>
+                <h5 class="card-title">Torta de Chocolate <span class="badge rounded-pill text-bg-info">Nuevo</span></h5>
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
