agregue el maquetado de la pagina de historia

--- a/pages/historia.html
+++ b/pages/historia.html
@@ -24,12 +24,18 @@
             aria-controls="navbarNavAltMarkup"
             aria-expanded="false"
             aria-label="Toggle navigation"
-          ><span class="navbar-toggler-icon"></span>
+          >
+            <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
               <a class="nav-link" href="../index.html">Inicio</a>
-              <a class="nav-link active" aria-current="page" href="/pages/historia.html">Historia</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/pages/historia.html"
+                >Historia</a
+              >
               <a class="nav-link" href="/pages/productos.html">Productos</a>
               <a class="nav-link" href="/pages/contacto.html">Contacto</a>
             </div>
@@ -37,10 +43,34 @@
         </div>
       </nav>
     </header>
-    <main>
-
+    <main class="container my-5">
+      <h1 class="display-1 text-center">Sobre nuestra historia</h1>
+      <hr />
+      <section class="row">
+        <aside class="col-12 col-md-6">
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto
+            harum nisi, necessitatibus amet minima quidem inventore eos sapiente
+            sunt ipsum nihil ab beatae autem cupiditate alias optio blanditiis
+            nostrum deserunt dolorum? Cupiditate numquam delectus blanditiis
+            iure sunt, necessitatibus non recusandae voluptatem fugiat sed
+            deserunt adipisci ut magni animi consequatur similique, aliquam,
+            reiciendis repudiandae tempore asperiores quam officiis provident.
+            Debitis recusandae corrupti quod, harum modi officiis mollitia
+            pariatur ab fugit, quam nobis saepe, consequuntur facilis dicta
+            illum? Dicta dolorem officia laborum explicabo nam! Illo nobis,
+            ratione facilis, corrupti laborum, maiores vel reprehenderit
+            reiciendis ea dolores harum? Natus eos sapiente tempore vero.
+          </p>
+        </aside>
+        <aside class="col-12 col-md-6">
+          <img src="/img/historia.png" alt="panaderia cocu" class="w-100">
+        </aside>
+      </section>
     </main>
-    <footer class="bg-dark text-white fw-lighter text-center my-5 p-3">&copy; Todos los derechos reservados</footer>
+    <footer class="bg-dark text-white fw-lighter text-center my-5 p-3">
+      &copy; Todos los derechos reservados
+    </footer>
     <script src="/js/bootstrap.min.js"></script>
   </body>
 </html>
