--- a/pages/productos.html
+++ b/pages/productos.html
@@ -49,7 +49,7 @@
     </header>
     <main class="container my-5">
       <section>
-        <h1 class="display-1 text-center my-5">Lista de Productos</h1>
+        <h1 class="display-1 text-center text-primary my-5">Lista de Productos</h1>
         <hr />
         <article class="row">
           <aside class="col-12 col-md-4 col-lg-3 my-3">
