cambiamos el color del titulo de la pagina principal

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       </section>
       <section class="container">
         <article>
-          <h1 class="display-1 text-center my-5">Sobre nosotros</h1>
+          <h1 class="display-1 text-center text-primary my-5">Sobre nosotros</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae quo
             adipisci incidunt excepturi repellat, suscipit molestiae nostrum
