modificamos el color del titulo proba nuestros sabores de la pagina principal

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         </article>
       </section>
       <section>
-        <h2 class="display-1 text-center my-4">Proba Nuestros Sabores</h2>
+        <h2 class="display-1 text-center text-danger my-4">Proba Nuestros Sabores</h2>
         <hr />
         <section class="container mb-5">
           <article class="row">
